@@ -2,8 +2,8 @@ package code.contestpractice.hackerearth;
 
 public class Test {
     public static void main(String[] args) {
-        Integer i = new Integer(1);
-        Integer j = new Integer(1);
+        Integer i = Integer.valueOf(1);
+        Integer j = Integer.valueOf(1);
         System.out.println(i == j);
         System.out.println(i.equals(j));
     }
